--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,6 +11,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+    - name: Set up Swift environment
+      uses: actions/setup-swift@v1
+      with:
+        swift-version: '5.10.0'
     - name: Build
       run: swift build -v
     - name: Run tests
