--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,10 +13,9 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
-    - name: Set up Swift environment
-      uses: actions/setup-swift@v2
+    - uses: swift-actions/setup-swift@v2
       with:
-        swift-version: '5.10.0'
+        swift-version: "5.10.0"
     - name: Build
       run: swift build -v
     - name: Run tests
