--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches: [ "main" ]
 
+permissions: write-all
+
 jobs:
   build:
 
@@ -25,3 +27,5 @@ jobs:
       run: |
         git tag -a 1.0.${{ github.run_number }} -m "Release version 1.0.${{ github.run_number }}"
         git push origin 1.0.${{ github.run_number }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.YOUR_PAT_SECRET_NAME }}
